projects/cyllama/llama.pxd


        llama_rope_scaling_type rope_scaling_type # RoPE scaling type
        llama_pooling_type      pooling_type      # whether to pool (sum) embedding results by sequence id
        llama_attention_type    attention_type    # attention type to use for embeddings

        float    rope_freq_base   # RoPE base frequency, 0 = from model
        float    rope_freq_scale  # RoPE frequency scaling factor, 0 = from model
        float    yarn_ext_factor  # YaRN extrapolation mix factor, negative = from model
        float    yarn_attn_factor # YaRN magnitude scaling factor
        float    yarn_beta_fast   # YaRN low correction dim
        float    yarn_beta_slow   # YaRN high correction dim
        uint32_t yarn_orig_ctx    # YaRN original context size
        float    defrag_thold     # defragment the KV cache if holes/size > thold, < 0 disabled (default)

        ggml_backend_sched_eval_callback cb_eval
        void * cb_eval_user_data

        ggml_type type_k # data type for K cache [EXPERIMENTAL]
        ggml_type type_v # data type for V cache [EXPERIMENTAL]

        # Keep the booleans together to avoid misalignment during copy-by-value.
        bint logits_all  # the llama_decode() call computes all logits, not just the last one (DEPRECATED - set llama_batch.logits instead)
        bint embeddings  # if true, extract embeddings (together with logits)
        bint offload_kqv # whether to offload the KQV ops (including the KV cache) to GPU
        bint flash_attn  # whether to use flash attention [EXPERIMENTAL]

        # Abort callback
        # if it returns true, execution of llama_decode() will be aborted
        # currently works only with CPU execution
        ggml_abort_callback abort_callback
        void * abort_callback_data


    ctypedef struct llama_model_quantize_params:
        int32_t nthread                     # number of threads to use for quantizing, if <=0 will use std::thread::hardware_concurrency()
        llama_ftype ftype                   # quantize to this llama_ftype
        ggml_type output_tensor_type        # output tensor type
        ggml_type token_embedding_type      # itoken embeddings tensor type
        bint allow_requantize               # allow quantizing non-f32/f16 tensors
        bint quantize_output_tensor         # quantize output.weight
        bint only_copy                      # only copy tensors - ftype, allow_requantize and quantize_output_tensor are ignored
        bint pure                           # quantize all tensors to the default type
        bint keep_split                     # quantize to the same number of shards
        void * imatrix                      # pointer to importance matrix data
        void * kv_overrides                 # pointer to vector containing overrides

    ctypedef struct llama_grammar

    ctypedef enum llama_gretype:
        LLAMA_GRETYPE_END            = 0
        LLAMA_GRETYPE_ALT            = 1
        LLAMA_GRETYPE_RULE_REF       = 2
        LLAMA_GRETYPE_CHAR           = 3
        LLAMA_GRETYPE_CHAR_NOT       = 4
        LLAMA_GRETYPE_CHAR_RNG_UPPER = 5
        LLAMA_GRETYPE_CHAR_ALT       = 6
        LLAMA_GRETYPE_CHAR_ANY       = 7

    ctypedef struct llama_grammar_element:
        llama_gretype type
        uint32_t value

    ctypedef struct llama_timings:
        double t_start_ms
        double t_end_ms
        double t_load_ms
        double t_sample_ms
        double t_p_eval_ms
        double t_eval_ms

        int32_t n_sample
        int32_t n_p_eval
        int32_t n_eval

    ctypedef struct llama_chat_message:
        const char * role
        const char * content

    ctypedef struct llama_lora_adapter


    # -------------------------------------------------------------------------
    # functions

    cdef llama_model_params llama_model_default_params()
    cdef llama_context_params llama_context_default_params()
    cdef llama_model_quantize_params llama_model_quantize_default_params()



